[package]
name = "btc_vrainwallet"
version = "0.1.0"
edition = "2018"

[dependencies]
bitcoin = "0.26.0"
secp256k1 = "0.24.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
itertools = "0.10"
futures = "0.3"
rand = "0.8"
